--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href = "Reservation.html"><img src="images/reservation.png" alt="Reservation" style="width:50%"></a>
             <a href = "Menu.html"><img src="images/Menu.png" alt="Menu" style="width: 50%;"></a>
             <a href = "findus.html"><img src="images/findus.png" alt="Find Us" style="width: 50%;"></a>
+            <a href = "C:\Users\nexan\Desktop\BIT 607\The-Haukai\private\roster.html"><img src="images/findus.png" alt="Find Us" style="width: 50%;"></a>
         </div>
    </body>
    <hr>
