--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-122078755-1"></script>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-E5WMHZFV7W"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-            gtag('config', 'G-E5WMHZFV7W');
-     </script>
+
+         gtag('config', 'G-E5WMHZFV7W');
+        </script>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/TheHaukai.css">
         <title>The Haukai Resturant</title>
