--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href = "Reservation.html"><img src="images/reservation.png" alt="Reservation" style="width:50%"></a>
             <a href = "Menu.html"><img src="images/Menu.png" alt="Menu" style="width: 50%;"></a>
             <a href = "findus.html"><img src="images/findus.png" alt="Find Us" style="width: 50%;"></a>
-            <a href = "private/roster.html"><img src="images/findus.png" alt="Find Us" style="width: 50%;"></a>
+            <a href = "private/roster.html"><img src="images/staff.png" alt="Find Us" style="width: 50%;"></a>
         </div>
    </body>
    <hr>
